fix: fix overflow and rows for board containers

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -6,6 +6,7 @@
     "users calendar"
   ;
   grid-template-columns: minmax(80px, 120px) 1fr;
+  grid-template-rows: 35px 1fr;
   gap: 5px;
   padding: 10px;
   background-color: var(--colorUIPrimary);
@@ -19,6 +20,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 5px;
+  overflow: hidden;
 }
 
 .board__calendar {
@@ -30,6 +32,7 @@
 @media screen and (max-width: 1280px){
   .board {
     grid-template-columns: minmax(50px, 80px) 1fr;
+    grid-template-rows: 32px 1fr;
     gap: 3px;
   }
 
@@ -45,7 +48,9 @@
 @media screen and (max-width: 1023px){
   .board {
     grid-template-columns: 60px 1fr;
+    grid-template-rows: 20px 1fr;
     padding: 5px;
+    overflow: hidden;
   }
 }
 
